--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "lyra"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+dotenv = "0.15.0"
+reqwest = "0.11.23"
+serenity = "0.12.0"
+songbird = { version = "0.4.0", features = ["builtin-queue", "serenity"] }
+symphonia = "0.5.3"
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
+tracing = "0.1.40"
+tracing-futures = "0.2.5"
+tracing-subscriber = "0.3.18"
