--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
+regex = "1.10.3"
 reqwest = "0.11.23"
 serenity = "0.12.0"
 songbird = { version = "0.4.0", features = ["builtin-queue", "serenity"] }
