--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 dotenv = "0.15.0"
 regex = "1.10.3"
 reqwest = "0.11.23"
-serenity = "0.12.0"
+serenity = { version = "0.12.0", features = ["cache", "framework", "standard_framework", "voice"] }
 songbird = { version = "0.4.0", features = ["builtin-queue", "serenity"] }
 symphonia = "0.5.3"
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
