--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lyra"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Michał Czyż <mike@c2yz.com>"]
 edition = "2021"
 description = "A featureful Discord bot written in Rust."
@@ -16,6 +16,7 @@ dotenv = "0.15.0"
 fancy-regex = "0.13.0"
 openssl = { version = "0.10.63", features = ["vendored"] }
 poise = "0.6.1"
+rand = "0.8.5"
 regex = "1.10.3"
 reqwest = "0.11.23"
 serenity = { version = "0.12.0", features = ["cache", "framework", "standard_framework", "voice"] }
