--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lyra"
-version = "0.8.1"
+version = "0.8.2"
 authors = ["Michał Czyż <mike@c2yz.com>"]
 edition = "2021"
 description = "A featureful Discord bot written in Rust."
@@ -15,19 +15,31 @@ keywords = ["discord", "bot", "rust", "music", "featureful"]
 dotenv = "0.15.0"
 fancy-regex = "0.13.0"
 json = "0.12.4"
-openssl = { version = "0.10.63", features = ["vendored"] }
+openssl = { version = "0.10.66", features = ["vendored"] }
 owoify = "0.1.5"
 poise = "0.6.1"
 rand = "0.8.5"
-regex = "1.10.3"
-reqwest = { version = "0.11.23", features = ["json"]}
-serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.114"
-serenity = { version = "0.12.0", features = ["cache", "framework", "standard_framework", "voice"] }
-songbird = { version = "0.4.0", features = ["builtin-queue", "serenity"] }
-symphonia = { version = "0.5.3", features = ["aac", "adpcm", "alac", "flac", "mpa", "isomp4"] }
-tokio = { version = "1.35.1", features = ["macros", "full", "signal"] }
+regex = "1.10.6"
+reqwest = { version = "0.11.27", features = ["json"] }
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.122"
+serenity = { version = "0.12.2", features = [
+    "cache",
+    "framework",
+    "standard_framework",
+    "voice",
+] }
+songbird = { version = "0.4.3", features = ["builtin-queue", "serenity"] }
+symphonia = { version = "0.5.4", features = [
+    "aac",
+    "adpcm",
+    "alac",
+    "flac",
+    "mpa",
+    "isomp4",
+] }
+tokio = { version = "1.39.2", features = ["macros", "full", "signal"] }
 tracing = "0.1.40"
 tracing-futures = "0.2.5"
 tracing-subscriber = "0.3.18"
-url = "2.5.0"
+url = "2.5.2"
