--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ homepage = "https://lyra.c2yz.com"
 license-file = "LICENSE.md"
 keywords = ["discord", "bot", "rust", "music", "featureful"]
 
-
 [dependencies]
 lib-spotify-parser = { path = "libs/spotify-parser" }
 dotenv = "0.15.0"
@@ -24,13 +23,18 @@ regex = "1.10.6"
 reqwest = { version = "0.11.27", features = ["json"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.122"
-serenity = { version = "0.12.2", features = [
+songbird = { path = "./libs/songbird", version = "0.4", default-features = true, features = [
+    "builtin-queue",
+] }
+serenity = { features = [
     "cache",
     "framework",
     "standard_framework",
     "voice",
-] }
-songbird = { version = "0.4.3", features = ["builtin-queue", "serenity"] }
+    "http",
+    "rustls_backend",
+], version = "0.12" }
+
 symphonia = { version = "0.5.4", features = [
     "aac",
     "adpcm",
