--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ serde_json = "1.0.122"
 songbird = { path = "./libs/songbird", version = "0.4", default-features = true, features = [
     "builtin-queue",
 ] }
-serenity = { features = [
+serenity = { path = "./libs/serenity", default-features = true, features = [
     "cache",
     "framework",
     "standard_framework",
