--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lyra"
-version = "0.9.0"
+version = "0.9.1"
 authors = ["Michał Czyż <mike@c2yz.com>"]
 edition = "2021"
 description = "A featureful Discord bot written in Rust."
@@ -11,19 +11,19 @@ license-file = "LICENSE.md"
 keywords = ["discord", "bot", "rust", "music", "featureful"]
 
 [dependencies]
-lib-spotify-parser = { path = "libs/spotify-parser" }
+lib-spotify-parser = { path = "./libs/spotify-parser" }
 dotenv = "0.15.0"
 fancy-regex = "0.13.0"
 json = "0.12.4"
 openssl = { version = "0.10.66", features = ["vendored"] }
 owoify = "0.1.5"
-poise = "0.6.1"
+poise = { path = "./libs/poise", default-features = true, version = "0.6.1" }
 rand = "0.8.5"
 regex = "1.10.6"
 reqwest = { version = "0.11.27", features = ["json"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.122"
-songbird = { path = "./libs/songbird", version = "0.4", default-features = true, features = [
+songbird = { path = "./libs/songbird", version = "0.4.3", default-features = true, features = [
     "builtin-queue",
 ] }
 serenity = { path = "./libs/serenity", default-features = true, features = [
@@ -49,3 +49,7 @@ tracing-futures = "0.2.5"
 tracing-subscriber = "0.3.18"
 url = "2.5.2"
 once_cell = "1.19.0"
+
+[patch.crates-io.serenity-voice-model]
+git = "https://github.com/serenity-rs/serenity"
+branch = "current"
