--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,16 +17,16 @@ fancy-regex = "0.13.0"
 json = "0.12.4"
 openssl = { version = "0.10.66", features = ["vendored"] }
 owoify = "0.1.5"
-poise = { path = "./libs/poise", default-features = true, version = "0.6.1" }
+poise = { default-features = true, version = "0.6.1" }
 rand = "0.8.5"
 regex = "1.10.6"
 reqwest = { version = "0.11.27", features = ["json"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.122"
-songbird = { path = "./libs/songbird", version = "0.4.3", default-features = true, features = [
+songbird = { version = "0.4.3", default-features = true, features = [
     "builtin-queue",
 ] }
-serenity = { path = "./libs/serenity", default-features = true, features = [
+serenity = { default-features = true, features = [
     "cache",
     "framework",
     "standard_framework",
