--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.10.0"
 authors = ["Michał Czyż <mike@c2yz.com>"]
 edition = "2021"
 description = "A featureful Discord bot written in Rust."
-documentation = "https://lyra.c2yz.com/docs"
+documentation = "https://github.com/eRgo35/lyra"
 readme = "README.md"
 homepage = "https://lyra.c2yz.com"
 license-file = "LICENSE.md"
@@ -13,9 +13,7 @@ keywords = ["discord", "bot", "rust", "music", "featureful"]
 [dependencies]
 lib-spotify-parser = { path = "./libs/spotify-parser" }
 dotenv = "0.15.0"
-fancy-regex = "0.13.0"
 json = "0.12.4"
-openssl = { version = "0.10.66", features = ["vendored"] }
 owoify = "0.1.5"
 poise = { default-features = true, version = "0.6.1" }
 rand = "0.8.5"
@@ -49,6 +47,8 @@ tracing-futures = "0.2.5"
 tracing-subscriber = "0.3.18"
 url = "2.5.2"
 once_cell = "1.19.0"
+openssl = { version = "0.10.66", features = ["vendored"] }
+audiopus = "0.2.0"
 
 [patch.crates-io.serenity-voice-model]
 git = "https://github.com/serenity-rs/serenity"
