--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Michał Czyż <mike@c2yz.com>"]
 edition = "2021"
 description = "A featureful Discord bot written in Rust."
 documentation = "https://github.com/eRgo35/lyra"
+repository = "https://github.com/eRgo35/lyra"
 readme = "README.md"
 homepage = "https://lyra.c2yz.com"
 license-file = "LICENSE.md"
